deployments/domains/infrastructure/apps/storage/base/manifests/ingress/dashboard-ingress.yaml
# deployments/domains/infrastructure/storage/base/ingress/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-verify: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ceph.proficientnowtech.com
      secretName: ceph-dashboard-tls
  rules:
    - host: ceph.proficientnowtech.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-mgr-dashboard
                port:
                  number: 7000
